--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">Apie</a>
+                        <a href="apie.html">Apie</a>
                     </li>
                     <li>
                         <a href="#">Nuoma</a>
