--- a/apie.html
+++ b/apie.html
@@ -69,9 +69,9 @@
             </div>
             <div class="col-md-6">
                 <h2>Jonaitiskiu Dvaras</h2>
-                <p>Dienos bėga, metai keičia metus - gimtadieniai, vestuvės, krikštynos, ar seniai matytų draugų susibūrimai, svarbiausi momentai mūsų gyvenime kartais prabėga nepastebėti ir neįvertinti. O juk taip norisi sustoti, atsipūsti, tiesiog pabūti su artimais žmonėmis. Vis pamirštame, kad laikrodžio rodyklių, deja, jau nepasuksim atgal. Tad kodėl nepažymėti mums skirtų progų kaip pridera, tam, kad atsimintume jas patys ir papasakotume kitiems, kaip mokėjom švęsti ir dovanoti Šventę kitiems.
-Kviečiame atšvęsti šventes ar organizuoti dalykinius susitikimus bei konferencijas, derinant kartu su poilsiu kaimo turizmo sodyboje  „Jonaitiškių dvaras“ , įsikūriosioje Radviliškio rajone, Jonaitiškių kaime. „Jonaitiškių dvaro“ sodybos  aplinka pritaikyta proginiams ir kultūriniams renginiams, kuriuose galėsite prisiliesti prie senųjų laikų dvasios, kultūros, gyvenimo būdo, suderinto su šiuolaikine estetika. Sodybos privalumas - skirtinguose dvaro pastatuose, kurie yra skirtingo dydžio, galima patogiai rengti tiek didelius renginius, tokius kaip vestuvės, konferencijos, įmonių vakarėliai, tiek mažesnius renginius, tokius kaip jubiliejai, gimtadieniai ar jaukūs pasisėdėjimai mažoje kompanijoje. Tai rami ir nuošali vieta, unikali nuostabiu erdvės ir vaizdingo kraštovaizdžio deriniu. Tai puiki vieta, norintiems praleisti laiką gamtoje, neatsisakant aukščiausio lygio patogumų.
-
+                <p>Dienos bėga, metai keičia metus - gimtadieniai, vestuvės, krikštynos, ar seniai matytų draugų susibūrimai, svarbiausi momentai mūsų gyvenime kartais prabėga nepastebėti ir neįvertinti. O juk taip norisi sustoti, atsipūsti, tiesiog pabūti su artimais žmonėmis. Vis pamirštame, kad laikrodžio rodyklių, deja, jau nepasuksim atgal. Tad kodėl nepažymėti mums skirtų progų kaip pridera, tam, kad atsimintume jas patys ir papasakotume kitiems, kaip mokėjom švęsti ir dovanoti Šventę kitiems.</p>
+<p>Kviečiame atšvęsti šventes ar organizuoti dalykinius susitikimus bei konferencijas, derinant kartu su poilsiu kaimo turizmo sodyboje  „Jonaitiškių dvaras“ , įsikūriosioje Radviliškio rajone, Jonaitiškių kaime. „Jonaitiškių dvaro“ sodybos  aplinka pritaikyta proginiams ir kultūriniams renginiams, kuriuose galėsite prisiliesti prie senųjų laikų dvasios, kultūros, gyvenimo būdo, suderinto su šiuolaikine estetika. Sodybos privalumas - skirtinguose dvaro pastatuose, kurie yra skirtingo dydžio, galima patogiai rengti tiek didelius renginius, tokius kaip vestuvės, konferencijos, įmonių vakarėliai, tiek mažesnius renginius, tokius kaip jubiliejai, gimtadieniai ar jaukūs pasisėdėjimai mažoje kompanijoje. Tai rami ir nuošali vieta, unikali nuostabiu erdvės ir vaizdingo kraštovaizdžio deriniu. Tai puiki vieta, norintiems praleisti laiką gamtoje, neatsisakant aukščiausio lygio patogumų.</p>
+<p>
 Jūs čia visada laukiami.
 </p>
             </div>
@@ -88,8 +88,6 @@ Jūs čia visada laukiami.
             </div>
             <!-- /.row -->
         </footer>
-
-    </div>
     <!-- /.container -->
 
     <!-- jQuery -->
