--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Jon Dvar</title>
+    <title>Jonaitiškių Dvaras</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">JonDvar</a>
+                <a class="navbar-brand" href="/">Jonaitiškių Dvaras</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -51,7 +51,7 @@
                         <a href="#">Nuoma</a>
                     </li>
                     <li>
-                        <a href="#">Kontaktait</a>
+                        <a href="#">Kontaktai</a>
                     </li>
                 </ul>
             </div>
@@ -67,6 +67,7 @@
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
+	<li data-target="#myCarousel" data-slide-to="3"></li>
         </ol>
 
         <!-- Wrapper for Slides -->
@@ -75,21 +76,28 @@
                 <!-- Set the first background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('img/j1.jpg');"></div>
                 <div class="carousel-caption">
-                    <h2>Caption 1</h2>
+                    <h2></h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('img/j2.jpg');"></div>
                 <div class="carousel-caption">
-                    <h2>Caption 2</h2>
+                    <h2></h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('img/j3.jpg');"></div>
                 <div class="carousel-caption">
-                    <h2>Caption 3</h2>
+                    <h2></h2>
+                </div>
+            </div>
+<div class="item">
+                <!-- Set the third background image using inline CSS below. -->
+                <div class="fill" style="background-image:url('img/j4.jpg');"></div>
+                <div class="carousel-caption">
+                    <h2></h2>
                 </div>
             </div>
         </div>
@@ -108,9 +116,51 @@
     <div class="container">
 
         <div class="row">
+            
             <div class="col-lg-12">
-                <h1>Dvaras</h1>
+                <h2 class="page-header">Sodybų nuoma</h2>
+                <p class="page-header">„Jonaitiškių dvaro“  sodybos teritorija užima daugiau nei 4 hektarus ploto, iš jų apie 0,5 hektaro užima  tvenkinys (yra didelis lieptas, valtis,vandens dviratis), apie 1 hektarą - senas parkas. Teritorijoje įrengtas sporto aikštynas (krepšinis, futbolas, tinklinis), vaikų žaidimo aikštelė. Yra keli skirtingi įvažiavimai ir kelios skirtingos automobilių stovėjimo aikštelės. Sodyboje yra  5 pastatai: „Dvaras“, „Svirnas“, „Klėtis“, „Seklyčia“, „Pirkia“, skirti švenčių šventimui ir poilsiui.</p>
             </div>
+            <div class="col-lg-12">
+
+                <ul id="myTab" class="nav nav-tabs nav-justified navbar-inverse">
+                    <li class="active"><a href="#service-one" data-toggle="tab">Dvaras</a>
+                    </li>
+                    <li class=""><a href="#service-two" data-toggle="tab">Svirnas</a>
+                    </li>
+                    <li class=""><a href="#service-three" data-toggle="tab">Klėtis</a>
+                    </li>
+                    <li class=""><a href="#service-four" data-toggle="tab">Seklyčia</a>
+                    </li>
+                    <li class=""><a href="#service-five" data-toggle="tab">Pirkia</a>
+                    </li>
+                </ul>
+
+                <div id="myTabContent" class="tab-content">
+                    <div class="tab-pane fade active in" id="service-one">
+                        <h4>Dvaras</h4>
+                        <p>Pastato plotas daugiau nei 800 kv. m, pobūvių salė daugiau nei 200 kv. m, joje patogiai gali švęsti iki 100 žmonių (maksimalus svečių skaičius iki 150 žmonių). Antrame aukšte įrengti miegamieji kambariai 57 svečiams, pramogų zona su biliardo, stalo teniso ir stalo fubolo stalais. Pastate yra labai didelė terasa, senovinis alaus rūsys, virtuvė su visa įranga ir indais. Tai pat pastate yra prabangiu stiliumi įrengti jaunavedžių apartamentai - tai atskiras miegamasis su svetaine ir sanitariniu mazgu.</p>
+                    </div>
+                    <div class="tab-pane fade" id="service-two">
+                        <h4>Svirnas</h4>
+                        <p>Pastato plotas daugiau nei 240 kv. m, pobūvių salė daugiau nei 70 kv. m, joje patogiai gali švęsti iki 40 žmonių (maksimalus svečių skaičius iki 50 asmenų). Antrame aukšte įrengti 3 miegamieji kambariai 28 svečiams. Pastate yra labai didelė terasa, virtuvė su visa įranga ir indais, 2 WC, dušas, pirtis bei lauko kubilas. </p>
+                    </div>
+                    <div class="tab-pane fade" id="service-three">
+                        <h4>Klėtis</h4>
+                        <p>Pastato plotas daugiau nei 120 kv. m, pobūvių salė daugiau nei 40 kv. m, joje patogiai gali švęsti iki 20 žmonių (maksimalus svečių skaičius iki 30 žmonių). Antrame aukšte yra 4  miegamieji kambariai. Trys kambariai yra keturviečiai (po dvi dvigules lovas) ir vienas dvivietis (viena dvigulė lova). Viso apnakvindinti galime 14 svečių. Pastate yra labai didelė terasa, indai, 2 WC, dušas, pirtis bei lauko kubilas. </p>
+                    </div>
+                    <div class="tab-pane fade" id="service-four">
+                        <h4>Seklyčia</h4>
+                        <p>Pastato plotas 90 kv. m, pobūvių salė 24 kv. m, joje patogiai gali švęsti iki 12  žmonių (maksimalus svečių skaičius iki 16 žmonių). Antrame aukšte įrengti 3 miegamieji kambariai, kuriuose gali miegoti 11 žmonių. Pastate yra terasa, mini virtuvė su indais, WC, dušas.</p>
+                    </div>
+                    <div class="tab-pane fade" id="service-five">
+                        <h4>Pirkia</h4>
+                        <p>Pastato plotas 90 kv. m, pobūvių salė 14 kv. m, joje patogiai gali švęsti iki  10 žmonių (maksimalus svečių skaičius iki 12 žmonių). Antrame aukšte įrengti 3 miegamieji kambariai, kuriuose gali miegoti 11 žmonių. Pastate yra terasa, visi reikalingi indai, WC, dušas, pirtis.</p>
+                    </div>
+                </div>
+
+            </div>
+        
         </div>
 
         <hr>
@@ -119,7 +169,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; JonDvar 2016</p>
+                    <p>Copyright &copy; Jonaitiškių Dvaras 2016</p>
                 </div>
             </div>
             <!-- /.row -->
