--- a/apie.html
+++ b/apie.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Jon Dvar</title>
+    <title>Jonaitiškių Dvaras</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,6 @@
 </head>
 
 <body>
-
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
@@ -39,7 +38,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">JonDvar</a>
+                <a class="navbar-brand" href="/">Jonaitiškių Dvaras</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -51,7 +50,7 @@
                         <a href="#">Nuoma</a>
                     </li>
                     <li>
-                        <a href="#">Kontaktait</a>
+                        <a href="#">Kontaktai</a>
                     </li>
                 </ul>
             </div>
@@ -59,15 +58,14 @@
         </div>
         <!-- /.container -->
     </nav>
-
     <!-- Page Content -->
  <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                <img src="img/visas_herbas.gif" alt="Logotipas" class="img-responsive center-block" />
             </div>
             <div class="col-md-6">
-                <h2>Jonaitiskiu Dvaras</h2>
+                <h2>Jonaitiškių Dvaras</h2>
                 <p>Dienos bėga, metai keičia metus - gimtadieniai, vestuvės, krikštynos, ar seniai matytų draugų susibūrimai, svarbiausi momentai mūsų gyvenime kartais prabėga nepastebėti ir neįvertinti. O juk taip norisi sustoti, atsipūsti, tiesiog pabūti su artimais žmonėmis. Vis pamirštame, kad laikrodžio rodyklių, deja, jau nepasuksim atgal. Tad kodėl nepažymėti mums skirtų progų kaip pridera, tam, kad atsimintume jas patys ir papasakotume kitiems, kaip mokėjom švęsti ir dovanoti Šventę kitiems.</p>
 <p>Kviečiame atšvęsti šventes ar organizuoti dalykinius susitikimus bei konferencijas, derinant kartu su poilsiu kaimo turizmo sodyboje  „Jonaitiškių dvaras“ , įsikūriosioje Radviliškio rajone, Jonaitiškių kaime. „Jonaitiškių dvaro“ sodybos  aplinka pritaikyta proginiams ir kultūriniams renginiams, kuriuose galėsite prisiliesti prie senųjų laikų dvasios, kultūros, gyvenimo būdo, suderinto su šiuolaikine estetika. Sodybos privalumas - skirtinguose dvaro pastatuose, kurie yra skirtingo dydžio, galima patogiai rengti tiek didelius renginius, tokius kaip vestuvės, konferencijos, įmonių vakarėliai, tiek mažesnius renginius, tokius kaip jubiliejai, gimtadieniai ar jaukūs pasisėdėjimai mažoje kompanijoje. Tai rami ir nuošali vieta, unikali nuostabiu erdvės ir vaizdingo kraštovaizdžio deriniu. Tai puiki vieta, norintiems praleisti laiką gamtoje, neatsisakant aukščiausio lygio patogumų.</p>
 <p>
@@ -81,7 +79,7 @@ Jūs čia visada laukiami.
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; JonDvar 2016</p>
+                    <p>Copyright &copy; Jonaitiškių Dvaras 2016</p>
                 </div>
             </div>
             <!-- /.row -->
