--- a/index.html
+++ b/index.html
@@ -183,12 +183,15 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap-tabcollapse.js"></script>
+
 
     <!-- Script to Activate the Carousel -->
     <script>
     $('.carousel').carousel({
         interval: 5000 //changes the speed
     })
+    $('#myTab').tabCollapse();
     </script>
 
 </body>
