--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     </nav>
 
     <!-- Full Page Image Background Carousel Header -->
+    <div class="overlay"><h1>Jonaitiškių Dvaras</h1></div>
     <header id="myCarousel" class="carousel slide">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -164,7 +165,6 @@
         </div>
 
         <hr>
-
         <!-- Footer -->
         <footer>
             <div class="row">
@@ -193,6 +193,27 @@
     })
     $('#myTab').tabCollapse();
     </script>
+    <script>
+function initialize()
+{
+  var mapProp = {
+    center: new google.maps.LatLng(51.508742,-0.120850),
+    zoom:7,
+    mapTypeId: google.maps.MapTypeId.ROADMAP
+  };
+  var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+}
+
+function loadScript()
+{
+  var script = document.createElement("script");
+  script.type = "text/javascript";
+  script.src = "http://maps.googleapis.com/maps/api/js?key=&sensor=false&callback=initialize";
+  document.body.appendChild(script);
+}
+
+window.onload = loadScript;
+</script>
 
 </body>
 
