--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
 
     <!-- Full Page Image Background Carousel Header -->
-    <div class="overlay"><h1>Jonaitiškių Dvaras</h1></div>
+    <!--<div class="overlay"><h1>Jonaitiškių Dvaras</h1></div>-->
     <header id="myCarousel" class="carousel slide">
         <!-- Indicators -->
         <ol class="carousel-indicators">
