--- a/index.html
+++ b/index.html
@@ -74,6 +74,20 @@
         <!-- Wrapper for Slides -->
         <div class="carousel-inner">
             <div class="item active">
+                <div class="header-text hidden-xs">
+                        <div class="col-md-12 text-center">
+                            <h2>
+                                <span><img src="img/visas_herbas.gif" alt="logotipas"></span>
+                            </h2>
+                            <br>
+                            <h3>
+                                <span>Pobuvių salių ir pirčių nuoma</span>
+                            </h3>
+                            <br>
+                            <div class="">
+                                <a class="btn btn-theme btn-sm btn-min-block" href="#">1</a><a class="btn btn-theme btn-sm btn-min-block" href="#">2</a></div>
+                        </div>
+                    </div>
                 <!-- Set the first background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('img/j1.jpg');"></div>
                 <div class="carousel-caption">
@@ -81,6 +95,20 @@
                 </div>
             </div>
             <div class="item">
+                <div class="header-text hidden-xs">
+                        <div class="col-md-12 text-center">
+                            <h2>
+                                <span><img src="img/visas_herbas.gif" alt="logotipas"></span>
+                            </h2>
+                            <br>
+                            <h3>
+                                <span>Pobuvių salių ir pirčių nuoma</span>
+                            </h3>
+                            <br>
+                            <div class="">
+                                <a class="btn btn-theme btn-sm btn-min-block" href="#">1</a><a class="btn btn-theme btn-sm btn-min-block" href="#">2</a></div>
+                        </div>
+                    </div>
                 <!-- Set the second background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('img/j2.jpg');"></div>
                 <div class="carousel-caption">
@@ -88,6 +116,20 @@
                 </div>
             </div>
             <div class="item">
+                <div class="header-text hidden-xs">
+                        <div class="col-md-12 text-center">
+                                 <br>
+                                <span><img src="img/visas_herbas.gif" alt="logotipas"></span>
+                            </h2>
+                            <br>
+                            <h3>
+                                <span>Pobuvių salių ir pirčių nuoma</span>
+                            </h3>
+                            <br>
+                            <div class="">
+                                <a class="btn btn-theme btn-sm btn-min-block" href="#">1</a><a class="btn btn-theme btn-sm btn-min-block" href="#">2</a></div>
+                        </div>
+                    </div>
                 <!-- Set the third background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('img/j3.jpg');"></div>
                 <div class="carousel-caption">
@@ -119,12 +161,12 @@
         <div class="row">
             
             <div class="col-lg-12">
-                <h2 class="page-header">Sodybų nuoma</h2>
-                <p class="page-header">„Jonaitiškių dvaro“  sodybos teritorija užima daugiau nei 4 hektarus ploto, iš jų apie 0,5 hektaro užima  tvenkinys (yra didelis lieptas, valtis,vandens dviratis), apie 1 hektarą - senas parkas. Teritorijoje įrengtas sporto aikštynas (krepšinis, futbolas, tinklinis), vaikų žaidimo aikštelė. Yra keli skirtingi įvažiavimai ir kelios skirtingos automobilių stovėjimo aikštelės. Sodyboje yra  5 pastatai: „Dvaras“, „Svirnas“, „Klėtis“, „Seklyčia“, „Pirkia“, skirti švenčių šventimui ir poilsiui.</p>
+                <h2 class="page-header text-center">Sodybų nuoma</h2>
+                <h4 class="page-header text-center">„Jonaitiškių dvaro“ sodybos teritorija užima daugiau nei 4 hektarus ploto, iš jų apie 0,5 hektaro užima  tvenkinys (yra didelis lieptas, valtis, vandens dviratis), apie 1 hektarą - senas parkas. Teritorijoje įrengtas sporto aikštynas (krepšinis, futbolas, tinklinis), vaikų žaidimo aikštelė. Yra keli skirtingi įvažiavimai ir kelios skirtingos automobilių stovėjimo aikštelės. Sodyboje yra 5 pastatai: „Dvaras“, „Svirnas“, „Klėtis“, „Seklyčia“, „Pirkia“, skirti švenčių šventimui ir poilsiui.</h4>
             </div>
             <div class="col-lg-12">
 
-                <ul id="myTab" class="nav nav-tabs nav-justified navbar-inverse">
+                <ul id="myTab" class="nav nav-tabs nav-justified">
                     <li class="active"><a href="#service-one" data-toggle="tab">Dvaras</a>
                     </li>
                     <li class=""><a href="#service-two" data-toggle="tab">Svirnas</a>
@@ -139,24 +181,74 @@
 
                 <div id="myTabContent" class="tab-content">
                     <div class="tab-pane fade active in" id="service-one">
-                        <h4>Dvaras</h4>
-                        <p>Pastato plotas daugiau nei 800 kv. m, pobūvių salė daugiau nei 200 kv. m, joje patogiai gali švęsti iki 100 žmonių (maksimalus svečių skaičius iki 150 žmonių). Antrame aukšte įrengti miegamieji kambariai 57 svečiams, pramogų zona su biliardo, stalo teniso ir stalo fubolo stalais. Pastate yra labai didelė terasa, senovinis alaus rūsys, virtuvė su visa įranga ir indais. Tai pat pastate yra prabangiu stiliumi įrengti jaunavedžių apartamentai - tai atskiras miegamasis su svetaine ir sanitariniu mazgu.</p>
-                    </div>
+                        <div class="row">
+            <div class="col-md-7">
+                <a href="#">
+                    <img class="img-responsive" src="img/dvaras.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h3>Dvaras</h3>
+                <p class="text-justify">Pastato plotas daugiau nei 800 kv. m, pobūvių salė daugiau nei 200 kv. m, joje patogiai gali švęsti iki 100 žmonių (maksimalus svečių skaičius iki 150 žmonių).</p><p class="text-justify"> Antrame aukšte įrengti miegamieji kambariai 57 svečiams, pramogų zona su biliardo, stalo teniso ir stalo fubolo stalais. Pastate yra labai didelė terasa, senovinis alaus rūsys, virtuvė su visa įranga ir indais.</p> <p class="text-justify">Tai pat pastate yra prabangiu stiliumi įrengti jaunavedžių apartamentai - tai atskiras miegamasis su svetaine ir sanitariniu mazgu.</p>
+                <a class="btn btn-primary" href="#">Plačiau</a>
+            </div>
+        </div> 
+                        </div>
                     <div class="tab-pane fade" id="service-two">
-                        <h4>Svirnas</h4>
-                        <p>Pastato plotas daugiau nei 240 kv. m, pobūvių salė daugiau nei 70 kv. m, joje patogiai gali švęsti iki 40 žmonių (maksimalus svečių skaičius iki 50 asmenų). Antrame aukšte įrengti 3 miegamieji kambariai 28 svečiams. Pastate yra labai didelė terasa, virtuvė su visa įranga ir indais, 2 WC, dušas, pirtis bei lauko kubilas. </p>
+                        <div class="row">
+            <div class="col-md-7">
+                <a href="#">
+                    <img class="img-responsive" src="img/svirnas.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h3>Svirnas</h3>
+                <p class="text-justify">Pastato plotas daugiau nei 240 kv. m, pobūvių salė daugiau nei 70 kv. m, joje patogiai gali švęsti iki 40 žmonių (maksimalus svečių skaičius iki 50 asmenų).</p><p class="text-justify"> Antrame aukšte įrengti 3 miegamieji kambariai 28 svečiams. Pastate yra labai didelė terasa, virtuvė su visa įranga ir indais, 2 WC, dušas, pirtis bei lauko kubilas. </p>
+                <a class="btn btn-primary" href="#">Plačiau</a>
+            </div>
+        </div> 
                     </div>
                     <div class="tab-pane fade" id="service-three">
-                        <h4>Klėtis</h4>
-                        <p>Pastato plotas daugiau nei 120 kv. m, pobūvių salė daugiau nei 40 kv. m, joje patogiai gali švęsti iki 20 žmonių (maksimalus svečių skaičius iki 30 žmonių). Antrame aukšte yra 4  miegamieji kambariai. Trys kambariai yra keturviečiai (po dvi dvigules lovas) ir vienas dvivietis (viena dvigulė lova). Viso apnakvindinti galime 14 svečių. Pastate yra labai didelė terasa, indai, 2 WC, dušas, pirtis bei lauko kubilas. </p>
+                        <div class="row">
+            <div class="col-md-7">
+                <a href="#">
+                    <img class="img-responsive" src="img/kletis.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h3>Klėtis</h3>
+                <p class="text-justify">Pastato plotas daugiau nei 120 kv. m, pobūvių salė daugiau nei 40 kv. m, joje patogiai gali švęsti iki 20 žmonių (maksimalus svečių skaičius iki 30 žmonių). </p><p class="text-justify">Antrame aukšte yra 4  miegamieji kambariai. Trys kambariai yra keturviečiai (po dvi dvigules lovas) ir vienas dvivietis (viena dvigulė lova). Viso apnakvindinti galime 14 svečių. </p><p class="text-justify">Pastate yra labai didelė terasa, indai, 2 WC, dušas, pirtis bei lauko kubilas. </p>
+                <a class="btn btn-primary" href="#">Plačiau</a>
+            </div>
+        </div> 
                     </div>
                     <div class="tab-pane fade" id="service-four">
-                        <h4>Seklyčia</h4>
-                        <p>Pastato plotas 90 kv. m, pobūvių salė 24 kv. m, joje patogiai gali švęsti iki 12  žmonių (maksimalus svečių skaičius iki 16 žmonių). Antrame aukšte įrengti 3 miegamieji kambariai, kuriuose gali miegoti 11 žmonių. Pastate yra terasa, mini virtuvė su indais, WC, dušas.</p>
+                        <div class="row">
+            <div class="col-md-7">
+                <a href="#">
+                    <img class="img-responsive" src="img/seklycia.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h3>Seklyčia</h3>
+                <p class="text-justify">Pastato plotas 90 kv. m, pobūvių salė 24 kv. m, joje patogiai gali švęsti iki 12  žmonių (maksimalus svečių skaičius iki 16 žmonių).</p> <p class="text-justify">Antrame aukšte įrengti 3 miegamieji kambariai, kuriuose gali miegoti 11 žmonių. Pastate yra terasa, mini virtuvė su indais, WC, dušas.</p>
+                <a class="btn btn-primary" href="#">Plačiau</a>
+            </div>
+        </div>
                     </div>
                     <div class="tab-pane fade" id="service-five">
-                        <h4>Pirkia</h4>
-                        <p>Pastato plotas 90 kv. m, pobūvių salė 14 kv. m, joje patogiai gali švęsti iki  10 žmonių (maksimalus svečių skaičius iki 12 žmonių). Antrame aukšte įrengti 3 miegamieji kambariai, kuriuose gali miegoti 11 žmonių. Pastate yra terasa, visi reikalingi indai, WC, dušas, pirtis.</p>
+                        <div class="row">
+            <div class="col-md-7">
+                <a href="#">
+                    <img class="img-responsive" src="img/pirkia.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h3>Pirkia</h3>
+                <p class="text-justify">Pastato plotas 90 kv. m, pobūvių salė 14 kv. m, joje patogiai gali švęsti iki  10 žmonių (maksimalus svečių skaičius iki 12 žmonių).</p> <p class="text-justify">Antrame aukšte įrengti 3 miegamieji kambariai, kuriuose gali miegoti 11 žmonių. Pastate yra terasa, visi reikalingi indai, WC, dušas, pirtis.</p>
+                <a class="btn btn-primary" href="#">Plačiau</a>
+            </div>
+        </div>
                     </div>
                 </div>
 
