--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <!-- Wrapper for Slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <div class="header-text hidden-xs">
+                <div class="header-text">
                         <div class="col-md-12 text-center">
                             <h2>
                                 <span><img src="img/visas_herbas.gif" alt="logotipas"></span>
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="item">
-                <div class="header-text hidden-xs">
+                <div class="header-text">
                         <div class="col-md-12 text-center">
                             <h2>
                                 <span><img src="img/visas_herbas.gif" alt="logotipas"></span>
@@ -116,7 +116,7 @@
                 </div>
             </div>
             <div class="item">
-                <div class="header-text hidden-xs">
+                <div class="header-text">
                         <div class="col-md-12 text-center">
                                  <br>
                                 <span><img src="img/visas_herbas.gif" alt="logotipas"></span>
@@ -137,6 +137,18 @@
                 </div>
             </div>
 <div class="item">
+    <div class="col-md-12 text-center">
+                            <h2>
+                                <span><img src="img/visas_herbas.gif" alt="logotipas"></span>
+                            </h2>
+                            <br>
+                            <h3>
+                                <span>Pobuvių salių ir pirčių nuoma</span>
+                            </h3>
+                            <br>
+                            <div class="">
+                                <a class="btn btn-theme btn-sm btn-min-block" href="#">1</a><a class="btn btn-theme btn-sm btn-min-block" href="#">2</a></div>
+                        </div>
                 <!-- Set the third background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('img/j4.jpg');"></div>
                 <div class="carousel-caption">
