--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="item">
                 <div class="header-text">
                         <div class="col-md-12 text-center">
-                                 <br>
+                            <h2>
                                 <span><img src="img/visas_herbas.gif" alt="logotipas"></span>
                             </h2>
                             <br>
@@ -137,7 +137,8 @@
                 </div>
             </div>
 <div class="item">
-    <div class="col-md-12 text-center">
+    <div class="header-text">
+                        <div class="col-md-12 text-center">
                             <h2>
                                 <span><img src="img/visas_herbas.gif" alt="logotipas"></span>
                             </h2>
@@ -149,6 +150,7 @@
                             <div class="">
                                 <a class="btn btn-theme btn-sm btn-min-block" href="#">1</a><a class="btn btn-theme btn-sm btn-min-block" href="#">2</a></div>
                         </div>
+                    </div>
                 <!-- Set the third background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('img/j4.jpg');"></div>
                 <div class="carousel-caption">
