--- a/index.html
+++ b/index.html
@@ -171,13 +171,16 @@
 
     <!-- Page Content -->
     <div class="container">
-
-        <div class="row">
-            
-            <div class="col-lg-12">
-                <h2 class="page-header text-center">Sodybų nuoma</h2>
-                <h4 class="page-header text-center">„Jonaitiškių dvaro“ sodybos teritorija užima daugiau nei 4 hektarus ploto, iš jų apie 0,5 hektaro užima  tvenkinys (yra didelis lieptas, valtis, vandens dviratis), apie 1 hektarą - senas parkas. Teritorijoje įrengtas sporto aikštynas (krepšinis, futbolas, tinklinis), vaikų žaidimo aikštelė. Yra keli skirtingi įvažiavimai ir kelios skirtingos automobilių stovėjimo aikštelės. Sodyboje yra 5 pastatai: „Dvaras“, „Svirnas“, „Klėtis“, „Seklyčia“, „Pirkia“, skirti švenčių šventimui ir poilsiui.</h4>
+<div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2>Sodybų nuoma</h2>
+                    <hr>
+                <h4 class="text-justify">„Jonaitiškių dvaro“ sodybos teritorija užima daugiau nei 4 hektarus ploto, iš jų apie 0,5 hektaro užima  tvenkinys (yra didelis lieptas, valtis, vandens dviratis), apie 1 hektarą - senas parkas.</h4>
+                <h4 class="text-justify"> Teritorijoje įrengtas sporto aikštynas (krepšinis, futbolas, tinklinis), vaikų žaidimo aikštelė. Yra keli skirtingi įvažiavimai ir kelios skirtingos automobilių stovėjimo aikštelės. </h4>
+                <h4 class="text-justify">Sodyboje yra 5 pastatai: „Dvaras“, „Svirnas“, „Klėtis“, „Seklyčia“, „Pirkia“, skirti švenčių šventimui ir poilsiui.</h4>
+                <hr>
             </div>
+        <div class="row">
             <div class="col-lg-12">
 
                 <ul id="myTab" class="nav nav-tabs nav-justified">
@@ -204,7 +207,7 @@
             <div class="col-md-5">
                 <h3>Dvaras</h3>
                 <p class="text-justify">Pastato plotas daugiau nei 800 kv. m, pobūvių salė daugiau nei 200 kv. m, joje patogiai gali švęsti iki 100 žmonių (maksimalus svečių skaičius iki 150 žmonių).</p><p class="text-justify"> Antrame aukšte įrengti miegamieji kambariai 57 svečiams, pramogų zona su biliardo, stalo teniso ir stalo fubolo stalais. Pastate yra labai didelė terasa, senovinis alaus rūsys, virtuvė su visa įranga ir indais.</p> <p class="text-justify">Tai pat pastate yra prabangiu stiliumi įrengti jaunavedžių apartamentai - tai atskiras miegamasis su svetaine ir sanitariniu mazgu.</p>
-                <a class="btn btn-primary" href="#">Plačiau</a>
+                <a class="btn btn-primary" href="dvaras.html">Plačiau</a>
             </div>
         </div> 
                         </div>
@@ -218,7 +221,7 @@
             <div class="col-md-5">
                 <h3>Svirnas</h3>
                 <p class="text-justify">Pastato plotas daugiau nei 240 kv. m, pobūvių salė daugiau nei 70 kv. m, joje patogiai gali švęsti iki 40 žmonių (maksimalus svečių skaičius iki 50 asmenų).</p><p class="text-justify"> Antrame aukšte įrengti 3 miegamieji kambariai 28 svečiams. Pastate yra labai didelė terasa, virtuvė su visa įranga ir indais, 2 WC, dušas, pirtis bei lauko kubilas. </p>
-                <a class="btn btn-primary" href="#">Plačiau</a>
+                <a class="btn btn-primary" href="svirnas.html">Plačiau</a>
             </div>
         </div> 
                     </div>
@@ -232,7 +235,7 @@
             <div class="col-md-5">
                 <h3>Klėtis</h3>
                 <p class="text-justify">Pastato plotas daugiau nei 120 kv. m, pobūvių salė daugiau nei 40 kv. m, joje patogiai gali švęsti iki 20 žmonių (maksimalus svečių skaičius iki 30 žmonių). </p><p class="text-justify">Antrame aukšte yra 4  miegamieji kambariai. Trys kambariai yra keturviečiai (po dvi dvigules lovas) ir vienas dvivietis (viena dvigulė lova). Viso apnakvindinti galime 14 svečių. </p><p class="text-justify">Pastate yra labai didelė terasa, indai, 2 WC, dušas, pirtis bei lauko kubilas. </p>
-                <a class="btn btn-primary" href="#">Plačiau</a>
+                <a class="btn btn-primary" href="kletis.html">Plačiau</a>
             </div>
         </div> 
                     </div>
@@ -246,7 +249,7 @@
             <div class="col-md-5">
                 <h3>Seklyčia</h3>
                 <p class="text-justify">Pastato plotas 90 kv. m, pobūvių salė 24 kv. m, joje patogiai gali švęsti iki 12  žmonių (maksimalus svečių skaičius iki 16 žmonių).</p> <p class="text-justify">Antrame aukšte įrengti 3 miegamieji kambariai, kuriuose gali miegoti 11 žmonių. Pastate yra terasa, mini virtuvė su indais, WC, dušas.</p>
-                <a class="btn btn-primary" href="#">Plačiau</a>
+                <a class="btn btn-primary" href="seklycia.html">Plačiau</a>
             </div>
         </div>
                     </div>
@@ -260,7 +263,7 @@
             <div class="col-md-5">
                 <h3>Pirkia</h3>
                 <p class="text-justify">Pastato plotas 90 kv. m, pobūvių salė 14 kv. m, joje patogiai gali švęsti iki  10 žmonių (maksimalus svečių skaičius iki 12 žmonių).</p> <p class="text-justify">Antrame aukšte įrengti 3 miegamieji kambariai, kuriuose gali miegoti 11 žmonių. Pastate yra terasa, visi reikalingi indai, WC, dušas, pirtis.</p>
-                <a class="btn btn-primary" href="#">Plačiau</a>
+                <a class="btn btn-primary" href="pirkia.html">Plačiau</a>
             </div>
         </div>
                     </div>
@@ -280,7 +283,7 @@
             </div>
             <!-- /.row -->
         </footer>
-
+        </div>
     </div>
     <!-- /.container -->
 
@@ -299,27 +302,6 @@
     })
     $('#myTab').tabCollapse();
     </script>
-    <script>
-function initialize()
-{
-  var mapProp = {
-    center: new google.maps.LatLng(51.508742,-0.120850),
-    zoom:7,
-    mapTypeId: google.maps.MapTypeId.ROADMAP
-  };
-  var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
-}
-
-function loadScript()
-{
-  var script = document.createElement("script");
-  script.type = "text/javascript";
-  script.src = "http://maps.googleapis.com/maps/api/js?key=&sensor=false&callback=initialize";
-  document.body.appendChild(script);
-}
-
-window.onload = loadScript;
-</script>
 
 </body>
 
