--- a/index.html
+++ b/index.html
@@ -74,20 +74,6 @@
         <!-- Wrapper for Slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <div class="header-text">
-                        <div class="col-md-12 text-center">
-                            <h2>
-                                <span><img src="img/visas_herbas.gif" alt="logotipas"></span>
-                            </h2>
-                            <br>
-                            <h3>
-                                <span>Pobuvių salių ir pirčių nuoma</span>
-                            </h3>
-                            <br>
-                            <div class="">
-                                <a class="btn btn-theme btn-sm btn-min-block" href="#">1</a><a class="btn btn-theme btn-sm btn-min-block" href="#">2</a></div>
-                        </div>
-                    </div>
                 <!-- Set the first background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('img/j1.jpg');"></div>
                 <div class="carousel-caption">
@@ -95,20 +81,6 @@
                 </div>
             </div>
             <div class="item">
-                <div class="header-text">
-                        <div class="col-md-12 text-center">
-                            <h2>
-                                <span><img src="img/visas_herbas.gif" alt="logotipas"></span>
-                            </h2>
-                            <br>
-                            <h3>
-                                <span>Pobuvių salių ir pirčių nuoma</span>
-                            </h3>
-                            <br>
-                            <div class="">
-                                <a class="btn btn-theme btn-sm btn-min-block" href="#">1</a><a class="btn btn-theme btn-sm btn-min-block" href="#">2</a></div>
-                        </div>
-                    </div>
                 <!-- Set the second background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('img/j2.jpg');"></div>
                 <div class="carousel-caption">
@@ -116,20 +88,6 @@
                 </div>
             </div>
             <div class="item">
-                <div class="header-text">
-                        <div class="col-md-12 text-center">
-                            <h2>
-                                <span><img src="img/visas_herbas.gif" alt="logotipas"></span>
-                            </h2>
-                            <br>
-                            <h3>
-                                <span>Pobuvių salių ir pirčių nuoma</span>
-                            </h3>
-                            <br>
-                            <div class="">
-                                <a class="btn btn-theme btn-sm btn-min-block" href="#">1</a><a class="btn btn-theme btn-sm btn-min-block" href="#">2</a></div>
-                        </div>
-                    </div>
                 <!-- Set the third background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('img/j3.jpg');"></div>
                 <div class="carousel-caption">
@@ -137,20 +95,6 @@
                 </div>
             </div>
 <div class="item">
-    <div class="header-text">
-                        <div class="col-md-12 text-center">
-                            <h2>
-                                <span><img src="img/visas_herbas.gif" alt="logotipas"></span>
-                            </h2>
-                            <br>
-                            <h3>
-                                <span>Pobuvių salių ir pirčių nuoma</span>
-                            </h3>
-                            <br>
-                            <div class="">
-                                <a class="btn btn-theme btn-sm btn-min-block" href="#">1</a><a class="btn btn-theme btn-sm btn-min-block" href="#">2</a></div>
-                        </div>
-                    </div>
                 <!-- Set the third background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('img/j4.jpg');"></div>
                 <div class="carousel-caption">
@@ -172,17 +116,10 @@
     <!-- Page Content -->
     <div class="container">
 <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2>Sodybų nuoma</h2>
-                    <hr>
-                <h4 class="text-justify">„Jonaitiškių dvaro“ sodybos teritorija užima daugiau nei 4 hektarus ploto, iš jų apie 0,5 hektaro užima  tvenkinys (yra didelis lieptas, valtis, vandens dviratis), apie 1 hektarą - senas parkas.</h4>
-                <h4 class="text-justify"> Teritorijoje įrengtas sporto aikštynas (krepšinis, futbolas, tinklinis), vaikų žaidimo aikštelė. Yra keli skirtingi įvažiavimai ir kelios skirtingos automobilių stovėjimo aikštelės. </h4>
-                <h4 class="text-justify">Sodyboje yra 5 pastatai: „Dvaras“, „Svirnas“, „Klėtis“, „Seklyčia“, „Pirkia“, skirti švenčių šventimui ir poilsiui.</h4>
-                <hr>
-            </div>
         <div class="row">
             <div class="col-lg-12">
-
+                <h2 class="text-center">Sodybų nuoma</h2>
+                    <hr>
                 <ul id="myTab" class="nav nav-tabs nav-justified">
                     <li class="active"><a href="#service-one" data-toggle="tab">Dvaras</a>
                     </li>
@@ -268,7 +205,13 @@
         </div>
                     </div>
                 </div>
-
+<div class="col-lg-8 col-lg-offset-2 text-center">
+    <hr>
+                <p class="lead">Teritorija - daugiau nei 4 hektarai ploto. 0,5 hektaro tvenkinys (yra didelis lieptas, valtis, vandens dviratis).
+            Teritorijoje įrengtas sporto aikštynas (krepšinis, futbolas, tinklinis), vaikų žaidimo aikštelė. Yra keli skirtingi įvažiavimai ir kelios skirtingos automobilių stovėjimo aikštelės.
+              Sodyboje yra 5 pastatai: „Dvaras“, „Svirnas“, „Klėtis“, „Seklyčia“, „Pirkia“, skirti švenčių šventimui ir poilsiui.</p>
+                <hr>
+            </div>
             </div>
         
         </div>
