--- a/apie.html
+++ b/apie.html
@@ -85,6 +85,68 @@ Jūs čia visada laukiami.
             <!-- /.row -->
         </footer>
     </div>
+
+                <div class="container">
+                        <div class="row">
+                            <div class="col-md-12 text-center">
+                                <header class="element-tall-top element-normal-bottom condensed skrollable skrollable-between" data-start="opacity:1" data-center="opacity:1" data-100-top-bottom="opacity:0" style="opacity: 1;">
+                                    <!--<h1 style="margin-bottom:20px;" class="super hairline bordered-normal">
+
+                </h1> -->
+                <div class="row " data-os-animation="" data-os-animation-delay="">
+                                    <div class="col-md-4 ">
+                                        <div class="element-medium-top element-medium-bottom text-center os-animation animated fadeInUp" data-os-animation="fadeInUp" data-os-animation-delay=".0s" style="animation-delay: 0s;">
+                                            <div class="box box-round box-normal element-medium-top element-short-bottom os-animation animated">
+                                                <div class="box-dummy"></div>
+                                                <a class="box-inner grid-overlay-10" href="#download" style="background-color:#e9e9e9;">
+                                                    <i id="blueIcon" class="fa fa-download"></i>
+                                                </a>
+                                            </div>
+                                            <h1 class="normal bold bordered bordered-small ">
+
+            Download
+
+    </h1>
+                                            <h3 class="">Get Started Now</h3>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4 ">
+                                        <div class="element-medium-top element-medium-bottom text-center os-animation animated fadeInUp" data-os-animation="fadeInUp" data-os-animation-delay=".15s" style="animation-delay: 0.15s;">
+                                            <div class="box box-round box-normal">
+                                                <div class="box-dummy"></div>
+                                                <a class="box-inner grid-overlay-10" href="#learnWS" style="background-color:#e9e9e9;">
+                                                    <i id="blueIcon" class="fa fa-book"></i>
+                                                </a>
+                                            </div>
+                                            <h1 class="normal bold bordered bordered-small ">
+
+            Learn
+
+    </h1>
+                                            <h3 class="">Knowledge is Power</h3>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4 ">
+                                        <div class="element-medium-top element-medium-bottom text-center os-animation animated fadeInUp" data-os-animation="fadeInUp" data-os-animation-delay=".3s" style="animation-delay: 0.3s;">
+                                            <div class="box box-round box-normal">
+                                                <div class="box-dummy"></div>
+                                                <a class="box-inner grid-overlay-10" href="#aboutWS" style="background-color:#e9e9e9;">
+                                                    <i id="blueIcon" class="fa fa-tachometer"></i>
+                                                </a>
+                                            </div>
+                                            <h1 class="normal bold bordered bordered-small ">
+
+            Go Beyond
+
+    </h1>
+                                            <h3 class="">With Riverbed Technology</h3>
+                                        </div>
+                                    </div>
+                                </div></header>
+
+                            </div>
+                        </div>
+                    </div>
     <!-- /.container -->
 
     <!-- jQuery -->
