--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
         <!-- Wrapper for Slides -->
         <div class="carousel-inner">
+
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('img/j1.jpg');"></div>
@@ -145,6 +146,8 @@
                                 <h3>Dvaras</h3>
                                 <p class="text-justify">Pastato plotas daugiau nei 800 kv. m, pobūvių salė daugiau nei 200 kv. m, joje patogiai gali švęsti iki 100 žmonių (maksimalus svečių skaičius iki 150 žmonių).</p><p class="text-justify"> Antrame aukšte įrengti miegamieji kambariai 57 svečiams, pramogų zona su biliardo, stalo teniso ir stalo fubolo stalais. Pastate yra labai didelė terasa, senovinis alaus rūsys, virtuvė su visa įranga ir indais.</p> <p class="text-justify">Tai pat pastate yra prabangiu stiliumi įrengti jaunavedžių apartamentai - tai atskiras miegamasis su svetaine ir sanitariniu mazgu.</p>
                                 <a class="btn btn-primary" href="dvaras.html">Plačiau</a>
+                                <a class="btn btn-primary" href="https://goo.gl/rnLq74">360° turas</a>
+                                <a class="btn btn-primary" href="#">Užsisakyti</a>
                             </div>
                         </div> 
                         </div>
@@ -159,6 +162,8 @@
                                         <h3>Svirnas</h3>
                                         <p class="text-justify">Pastato plotas daugiau nei 240 kv. m, pobūvių salė daugiau nei 70 kv. m, joje patogiai gali švęsti iki 40 žmonių (maksimalus svečių skaičius iki 50 asmenų).</p><p class="text-justify"> Antrame aukšte įrengti 3 miegamieji kambariai 28 svečiams. Pastate yra labai didelė terasa, virtuvė su visa įranga ir indais, 2 WC, dušas, pirtis bei lauko kubilas. </p>
                                         <a class="btn btn-primary" href="svirnas.html">Plačiau</a>
+                                        <a class="btn btn-primary" href="#">360° turas</a>
+                                <a class="btn btn-primary" href="#">Užsisakyti</a>
                                     </div>
                                 </div> 
                             </div>
@@ -173,6 +178,8 @@
                                         <h3>Klėtis</h3>
                                         <p class="text-justify">Pastato plotas daugiau nei 120 kv. m, pobūvių salė daugiau nei 40 kv. m, joje patogiai gali švęsti iki 20 žmonių (maksimalus svečių skaičius iki 30 žmonių). </p><p class="text-justify">Antrame aukšte yra 4  miegamieji kambariai. Trys kambariai yra keturviečiai (po dvi dvigules lovas) ir vienas dvivietis (viena dvigulė lova). Viso apnakvindinti galime 14 svečių. </p><p class="text-justify">Pastate yra labai didelė terasa, indai, 2 WC, dušas, pirtis bei lauko kubilas. </p>
                                         <a class="btn btn-primary" href="kletis.html">Plačiau</a>
+                                        <a class="btn btn-primary" href="#">360° turas</a>
+                                <a class="btn btn-primary" href="#">Užsisakyti</a>
                                     </div>
                                 </div> 
                             </div>
@@ -187,6 +194,8 @@
                                         <h3>Seklyčia</h3>
                                         <p class="text-justify">Pastato plotas 90 kv. m, pobūvių salė 24 kv. m, joje patogiai gali švęsti iki 12  žmonių (maksimalus svečių skaičius iki 16 žmonių).</p> <p class="text-justify">Antrame aukšte įrengti 3 miegamieji kambariai, kuriuose gali miegoti 11 žmonių. Pastate yra terasa, mini virtuvė su indais, WC, dušas.</p>
                                         <a class="btn btn-primary" href="seklycia.html">Plačiau</a>
+                                        <a class="btn btn-primary" href="#">360° turas</a>
+                                <a class="btn btn-primary" href="#">Užsisakyti</a>
                                     </div>
                                 </div>
                             </div>
@@ -201,6 +210,8 @@
                                         <h3>Pirkia</h3>
                                         <p class="text-justify">Pastato plotas 90 kv. m, pobūvių salė 14 kv. m, joje patogiai gali švęsti iki  10 žmonių (maksimalus svečių skaičius iki 12 žmonių).</p> <p class="text-justify">Antrame aukšte įrengti 3 miegamieji kambariai, kuriuose gali miegoti 11 žmonių. Pastate yra terasa, visi reikalingi indai, WC, dušas, pirtis.</p>
                                         <a class="btn btn-primary" href="pirkia.html">Plačiau</a>
+                                        <a class="btn btn-primary" href="#">360° turas</a>
+                                <a class="btn btn-primary" href="#">Užsisakyti</a>
                                     </div>
                                 </div>
                             </div>
@@ -208,15 +219,15 @@
                 </div>
                      <div class="col-lg-8 col-lg-offset-2 text-center">
                         <hr>
-                            <p class="lead">Teritorija - daugiau nei 4 hektarai ploto. 0,5 hektaro tvenkinys (yra didelis lieptas, valtis, vandens dviratis).
-                        Teritorijoje įrengtas sporto aikštynas (krepšinis, futbolas, tinklinis), vaikų žaidimo aikštelė. Yra keli skirtingi įvažiavimai ir kelios skirtingos automobilių stovėjimo aikštelės.
-                          Sodyboje yra 5 pastatai: „Dvaras“, „Svirnas“, „Klėtis“, „Seklyčia“, „Pirkia“, skirti švenčių šventimui ir poilsiui.</p>
+                            <p class="lead">Sodybos <b>teritorija</b> - ~4 ha.</br> 0,5 ha <b>tvenkinys</b> (didelis lieptas, valtis, vandens dviratis)</br>
+                        <b>Sporto aikštynas</b> (krepšinis, futbolas, tinklinis), vaikų žaidimo aikštelė.</br> Keli skirtingi įvažiavimai ir atskiros <b>automobilių stovėjimo</b> aikštelės.
+                          Sodyboje yra 5 nuomojami pastatai: „<b>Dvaras</b>“, „<b>Svirnas</b>“, „<b>Klėtis</b>“, „<b>Seklyčia</b>“, „<b>Pirkia</b>“, skirti Jūsų šventei ir poilsiui.</p>
                     </div>
         <!-- Footer -->
                     <hr>
                     <footer>
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Jonaitiškių Dvaras 2016</p>
+                <div class="col-lg-12 text-center">
+                    <p>Copyright &copy; Jonaitiškių Dvaras</p>
                 </div>
             <!-- /.row -->
                     </footer>
