--- a/svirnas.html
+++ b/svirnas.html
@@ -66,7 +66,7 @@
                     <hr>
     </div>
                 <div class="col-md-5">
-                <p>Svirnas:</p>
+                <p><b>Svirnas</b>:</p>
                 <ul>
                     <li>Pastato plotas daugiau nei 800 kv. m.
                     </li>
@@ -74,7 +74,6 @@
                     <li>Maksimalus svečių skaičius iki 150 žmonių</li>
                     <li>57 miegamieji kambariai svečiams</li>
                     <li>Biliardas, stalo tenisas ir stalo fubolas</li>
-                    <li>17 HTML pages</li>
                 </ul>
                 <p>Pastato plotas daugiau nei 240 kv. m, pobūvių salė daugiau nei 70 kv. m, joje patogiai gali švęsti iki 40 žmonių (maksimalus svečių skaičius iki 50 asmenų). Antrame aukšte įrengti 3 miegamieji kambariai 28 svečiams. Pastate yra labai didelė terasa, virtuvė su visa įranga ir indais, 2 WC, dušas, pirtis bei lauko kubilas. </p>
             </div>
@@ -115,13 +114,13 @@
         <!-- Footer -->
         <footer>
             <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Jonaitiškių Dvaras 2016</p>
+                <div class="col-lg-12 text-center">
+                    <p>Copyright &copy; Jonaitiškių Dvaras</p>
                 </div>
             </div>
+             </div>
             <!-- /.row -->
         </footer>
-    </div>
     <!-- /.container -->
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
