--- a/dvaras.html
+++ b/dvaras.html
@@ -66,7 +66,7 @@
                     <hr>
     </div>
                 <div class="col-md-5">
-                <p>Dvaras:</p>
+                <p><b>Dvaras</b>:</p>
                 <ul>
                     <li>Pastato plotas daugiau nei 800 kv. m.
                     </li>
@@ -74,7 +74,6 @@
                     <li>Maksimalus svečių skaičius iki 150 žmonių</li>
                     <li>57 miegamieji kambariai svečiams</li>
                     <li>Biliardas, stalo tenisas ir stalo fubolas</li>
-                    <li>17 HTML pages</li>
                 </ul>
                 <p>Pastate yra labai didelė terasa, senovinis alaus rūsys, virtuvė su visa įranga ir indais. Tai pat pastate yra prabangiu stiliumi įrengti jaunavedžių apartamentai - tai atskiras miegamasis su svetaine ir sanitariniu mazgu.</p>
             </div>
@@ -118,18 +117,17 @@
                     </a>
                 </div>
             </div>
-        <hr>
+        </div>
+        </div>
         <!-- Footer -->
         <footer>
-        </div>
             <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Jonaitiškių Dvaras 2016</p>
+                <div class="col-lg-12 text-center">
+                    <p>Copyright &copy; Jonaitiškių Dvaras</p>
                 </div>
             </div>
             <!-- /.row -->
         </footer>
-    </div>
     <!-- /.container -->
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
