--- a/kletis.html
+++ b/kletis.html
@@ -66,7 +66,7 @@
                     <hr>
     </div>
                 <div class="col-md-5">
-                <p>Klėtis:</p>
+                <p><b>Klėtis</b>:</p>
                 <ul>
                     <li>Pastato plotas daugiau nei 800 kv. m.
                     </li>
@@ -74,7 +74,6 @@
                     <li>Maksimalus svečių skaičius iki 150 žmonių</li>
                     <li>57 miegamieji kambariai svečiams</li>
                     <li>Biliardas, stalo tenisas ir stalo fubolas</li>
-                    <li>17 HTML pages</li>
                 </ul>
                 <p>Pastato plotas daugiau nei 120 kv. m, pobūvių salė daugiau nei 40 kv. m, joje patogiai gali švęsti iki 20 žmonių (maksimalus svečių skaičius iki 30 žmonių). Antrame aukšte yra 4  miegamieji kambariai. Trys kambariai yra keturviečiai (po dvi dvigules lovas) ir vienas dvivietis (viena dvigulė lova). Viso apnakvindinti galime 14 svečių. Pastate yra labai didelė terasa, indai, 2 WC, dušas, pirtis bei lauko kubilas. </p>
             </div>
@@ -110,18 +109,18 @@
                     </a>
                 </div>
             </div>
-        <hr>
+            </div>
+        </div>
         <!-- Footer -->
         <footer>
-             </div>
             <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Jonaitiškių Dvaras 2016</p>
+                <div class="col-lg-12 text-center">
+                    <p>Copyright &copy; Jonaitiškių Dvaras</p>
                 </div>
+            </div>
             </div>
             <!-- /.row -->
         </footer>
-    </div>
     <!-- /.container -->
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
