--- a/pirkia.html
+++ b/pirkia.html
@@ -66,7 +66,7 @@
                     <hr>
     </div>
                 <div class="col-md-5">
-                <p>Pirkia:</p>
+                <p><b>Pirkia</b>:</p>
                 <ul>
                     <li>Pastato plotas daugiau nei 800 kv. m.
                     </li>
@@ -74,7 +74,6 @@
                     <li>Maksimalus svečių skaičius iki 150 žmonių</li>
                     <li>57 miegamieji kambariai svečiams</li>
                     <li>Biliardas, stalo tenisas ir stalo fubolas</li>
-                    <li>17 HTML pages</li>
                 </ul>
                 <p>Pastato plotas 90 kv. m, pobūvių salė 14 kv. m, joje patogiai gali švęsti iki  10 žmonių (maksimalus svečių skaičius iki 12 žmonių). Antrame aukšte įrengti 3 miegamieji kambariai, kuriuose gali miegoti 11 žmonių. Pastate yra terasa, visi reikalingi indai, WC, dušas, pirtis.</p>
             </div>
@@ -82,18 +81,17 @@
             <div class="col-md-7">
                 <img class="img-responsive" src="img/pirkia.jpg" alt="">
             </div>
-        <hr>
         <!-- Footer -->
+        </div>
         </div>
         <footer>
             <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Jonaitiškių Dvaras 2016</p>
+                <div class="col-lg-12 text-center">
+                    <p>Copyright &copy; Jonaitiškių Dvaras</p>
                 </div>
             </div>
             <!-- /.row -->
         </footer>
-    </div>
     <!-- /.container -->
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
