--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                         <h3>Svirnas</h3>
                                         <p class="text-justify">Pastato plotas daugiau nei 240 kv. m, pobūvių salė daugiau nei 70 kv. m, joje patogiai gali švęsti iki 40 žmonių (maksimalus svečių skaičius iki 50 asmenų).</p><p class="text-justify"> Antrame aukšte įrengti 3 miegamieji kambariai 28 svečiams. Pastate yra labai didelė terasa, virtuvė su visa įranga ir indais, 2 WC, dušas, pirtis bei lauko kubilas. </p>
                                         <a class="btn btn-primary" href="svirnas.html">Plačiau</a>
-                                        <a class="btn btn-primary" href="#">360° turas</a>
+                                        <a class="btn btn-primary" href="https://goo.gl/pX8QZb">360° turas</a>
                                 <a class="btn btn-primary" href="#">Užsisakyti</a>
                                     </div>
                                 </div> 
@@ -178,7 +178,7 @@
                                         <h3>Klėtis</h3>
                                         <p class="text-justify">Pastato plotas daugiau nei 120 kv. m, pobūvių salė daugiau nei 40 kv. m, joje patogiai gali švęsti iki 20 žmonių (maksimalus svečių skaičius iki 30 žmonių). </p><p class="text-justify">Antrame aukšte yra 4  miegamieji kambariai. Trys kambariai yra keturviečiai (po dvi dvigules lovas) ir vienas dvivietis (viena dvigulė lova). Viso apnakvindinti galime 14 svečių. </p><p class="text-justify">Pastate yra labai didelė terasa, indai, 2 WC, dušas, pirtis bei lauko kubilas. </p>
                                         <a class="btn btn-primary" href="kletis.html">Plačiau</a>
-                                        <a class="btn btn-primary" href="#">360° turas</a>
+                                        <a class="btn btn-primary" href="https://goo.gl/xqAa8q">360° turas</a>
                                 <a class="btn btn-primary" href="#">Užsisakyti</a>
                                     </div>
                                 </div> 
@@ -194,7 +194,7 @@
                                         <h3>Seklyčia</h3>
                                         <p class="text-justify">Pastato plotas 90 kv. m, pobūvių salė 24 kv. m, joje patogiai gali švęsti iki 12  žmonių (maksimalus svečių skaičius iki 16 žmonių).</p> <p class="text-justify">Antrame aukšte įrengti 3 miegamieji kambariai, kuriuose gali miegoti 11 žmonių. Pastate yra terasa, mini virtuvė su indais, WC, dušas.</p>
                                         <a class="btn btn-primary" href="seklycia.html">Plačiau</a>
-                                        <a class="btn btn-primary" href="#">360° turas</a>
+                                        <a class="btn btn-primary" href="https://goo.gl/tYgque">360° turas</a>
                                 <a class="btn btn-primary" href="#">Užsisakyti</a>
                                     </div>
                                 </div>
@@ -210,7 +210,7 @@
                                         <h3>Pirkia</h3>
                                         <p class="text-justify">Pastato plotas 90 kv. m, pobūvių salė 14 kv. m, joje patogiai gali švęsti iki  10 žmonių (maksimalus svečių skaičius iki 12 žmonių).</p> <p class="text-justify">Antrame aukšte įrengti 3 miegamieji kambariai, kuriuose gali miegoti 11 žmonių. Pastate yra terasa, visi reikalingi indai, WC, dušas, pirtis.</p>
                                         <a class="btn btn-primary" href="pirkia.html">Plačiau</a>
-                                        <a class="btn btn-primary" href="#">360° turas</a>
+                                        <a class="btn btn-primary" href="https://goo.gl/BgsHlm">360° turas</a>
                                 <a class="btn btn-primary" href="#">Užsisakyti</a>
                                     </div>
                                 </div>
