--- a/seklycia.html
+++ b/seklycia.html
@@ -88,7 +88,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Jonaitiškių Dvaras</p>
+                    <p>+37065246496 • Alyvų g. 3, Jonaitiškių k. Radviliškio raj. 82468 • Copyright &copy; Jonaitiškių Dvaras</p>
                 </div>
             </div>
             <!-- /.row -->
