--- a/svirnas.html
+++ b/svirnas.html
@@ -111,14 +111,16 @@
             </div>
         <hr>
          </div>
+         </div>
         <!-- Footer -->
         <footer>
+            <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <p>+37065246496 • Alyvų g. 3, Jonaitiškių k. Radviliškio raj. 82468 • Copyright &copy; Jonaitiškių Dvaras</p>
                 </div>
             </div>
-             </div>
+        </div>
             <!-- /.row -->
         </footer>
     <!-- /.container -->
