--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     <hr>
                     <footer>
                 <div class="col-lg-12 text-center">
-                    <p>+37065246496 • Alyvų g. 3, Jonaitiškių k. Radviliškio raj. 82468 • Copyright &copy; Jonaitiškių Dvaras</p>
+                    <p>+37065246496 • Alyvų g. 3, Jonaitiškių k. Radviliškio raj. 82468 • &copy; Jonaitiškių Dvaras</p>
                 </div>
             <!-- /.row -->
                     </footer>
