--- a/pirkia.html
+++ b/pirkia.html
@@ -86,7 +86,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>+37065246496 • Alyvų g. 3, Jonaitiškių k. Radviliškio raj. 82468 • Copyright &copy; Jonaitiškių Dvaras</p>
+                    <p>+37065246496 • Alyvų g. 3, Jonaitiškių k. Radviliškio raj. 82468 • &copy; Jonaitiškių Dvaras</p>
                 </div>
             </div>
             <!-- /.row-->
