--- a/index.html
+++ b/index.html
@@ -222,9 +222,51 @@
                             <p class="lead">Sodybos <b>teritorija</b> - ~4 ha.</br> 0,5 ha <b>tvenkinys</b> (didelis lieptas, valtis, vandens dviratis)</br>
                         <b>Sporto aikštynas</b> (krepšinis, futbolas, tinklinis), vaikų žaidimo aikštelė.</br> Keli skirtingi įvažiavimai ir atskiros <b>automobilių stovėjimo</b> aikštelės.
                           Sodyboje yra 5 nuomojami pastatai: „<b>Dvaras</b>“, „<b>Svirnas</b>“, „<b>Klėtis</b>“, „<b>Seklyčia</b>“, „<b>Pirkia</b>“, skirti Jūsų šventei ir poilsiui.</p>
+                          <hr>
                     </div>
         <!-- Footer -->
-                    <hr>
+                    <div class="row">
+        <div class="col-md-6 text-center">
+                <div class="thumbnail">
+                    <img class="img-responsive" src="img/maitinimas.jpg" alt="">
+                    <div class="caption">
+                        <h3>Maitinimas<br>
+                            <small>Job Title</small>
+                        </h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
+                        <ul class="list-inline">
+                            <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-2x fa-linkedin-square"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-2x fa-twitter-square"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 text-center">
+                <div class="thumbnail">
+                    <img class="img-responsive" src="img/aksesuarai.jpg" alt="">
+                    <div class="caption">
+                        <h3>Aksesuarai<br>
+                            <small>Job Title</small>
+                        </h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
+                        <ul class="list-inline">
+                            <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-2x fa-linkedin-square"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-2x fa-twitter-square"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+                          <hr>
+
                     <footer>
                 <div class="col-lg-12 text-center">
                     <p>+37065246496 • Alyvų g. 3, Jonaitiškių k. Radviliškio raj. 82468 • &copy; Jonaitiškių Dvaras</p>
