--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2 class="text-center">Sodybų nuoma</h2>
+                    <h2 class="text-center">Nuoma</h2>
                     <hr>
                 </div>
                 <div class="col-lg-12">
@@ -231,9 +231,14 @@
                     <img class="img-responsive" src="img/maitinimas.jpg" alt="">
                     <div class="caption">
                         <h3>Maitinimas<br>
-                            <small>Job Title</small>
+                            <small>Užkąsk</small>
                         </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
+                        <p>Siūlome savo paslaugas paruošti vaišes jūsų šventei.
+
+Bendradarbiaujame  su puikiomis virėjomis, turinčiomis ilgametę patirtį maisto gaminimo srityje. Daržoves, mėsą perkame iš aplink mūsų sodybą ūkininkaujančių ūkininkų, todėl visas mūsų paruoštas maistas yra šviežias ir ypač skanus. Garantuojame profesionalų aptarnavimą, puikią maisto kokybę, nepriekaištingą stalo serviravimą.
+
+Pateikiame kelis mūsų sudarytus meniu jūsų įvertinimui. Meniu yra pavyzdinio pobūdžio, juos galima koreguoti pagal klientų pageidavimus.</p>
+<a class="btn btn-primary" href="#">Plačiau</a>
                         <ul class="list-inline">
                             <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
                             </li>
@@ -250,9 +255,10 @@
                     <img class="img-responsive" src="img/aksesuarai.jpg" alt="">
                     <div class="caption">
                         <h3>Aksesuarai<br>
-                            <small>Job Title</small>
+                            <small>Vestuvių atchodai</small>
                         </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
+                        <p>Nurodyta kaina gali keistis priklausomai nuo sezono,užsakomų kiekių ir kt. Tikslių kainų teirautis telefonu arba elektroniniu paštu. Nuomojantis salę „Jonaitiškių dvare" aksesuarų paruošimas pokyliui nemokamas. Aksesuarų paruošimas, uždejimas ir pristatymas kitose sodybose ar salėse, derybų klausimas.</p>
+                        <a class="btn btn-primary" href="#">Plačiau</a>
                         <ul class="list-inline">
                             <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
                             </li>
@@ -275,6 +281,15 @@
                     </footer>
             </div>
     </div>
+            <div id="disqus_thread"></div>
+<script>
+(function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = '//jondvar-github-io.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+})();
+</script>
     <!-- /.container -->
 
     <!-- jQuery -->
