--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ Pateikiame kelis mūsų sudarytus meniu jūsų įvertinimui. Meniu yra pavyzdini
                     <footer>
                         <div id="disqus_thread"></div>
 <script>
-(function() { // DON'T EDIT BELOW THIS LINE
+(function() {
     var d = document, s = d.createElement('script');
     s.src = '//jondvar-github-io.disqus.com/embed.js';
     s.setAttribute('data-timestamp', +new Date());
