--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ Pateikiame kelis mūsų sudarytus meniu jūsų įvertinimui. Meniu yra pavyzdini
         </div>
                           <hr>
                     <footer>
-                        <div id="disqus_thread" class="col-lg-12></div>
+                        <div id="disqus_thread" class="col-lg-12"></div>
 <script>
 (function() {
     var d = document, s = d.createElement('script');
